k8s/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    spec:
      containers:
      - name: server
        image: gcr.io/tengen-io/server:latest
        ports:
          - containerPort: 8080
