k8s/server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: api.tengen.io
    http:
      paths:
      - backend:
          serviceName: tengen-server
          servicePort: 80
  tls:
  - hosts:
    - api.tengen.io
    secretName: api-tengen-io-tls
